--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>memeriagor</p>
                 </div>
                 <div class="setinha">
-                    <img src="./img/Vector(1).png" alt="">
+                    <ion-icon name="chevron-forward-circle"></ion-icon>
                 </div>
             </div>
             <div class="postagens">
@@ -187,103 +187,112 @@
                 </div>
             </div>
         </div>
-    <div class="conteudo-direita">
-        <div class="perfil-usuario">
-            <div class="foto-nick">
-                <div class="foto">
-                    <img src="./img/catanacomics1.png" alt="">
-                </div>
-                <div class="nick">
-                    <p><b>catanacomics</b></p>
-                    <p>Catana</p>
-                </div>
-            </div>
-        </div>
-        <div class="sugestoes">
-            <div class="sugestoes-titulo">
-                <p>Sugestões para você</p>
-                <p><b>Ver tudo</b></p>
-            </div>
-            <div class="para-seguir">
-                <div class="perfil-usuario">
-                    <div class="foto-nick">
-                        <div class="foto">
-                            <img src="./img/badvibesmemes1.png" alt="">
-                        </div>
-                        <div class="nick">
-                            <p><b>bad.vibes.memes</b></p>
-                            <p>Segue você</p>
-                        </div>
+        <div class="conteudo-direita">
+            <div class="perfil-usuario">
+                <div class="foto-nick">
+                    <div class="foto">
+                        <img src="./img/catanacomics1.png" alt="">
                     </div>
-                    <div class="seguir-perfil">
-                        <a href="#">Seguir</a>
-                    </div>
-                </div>
-                <div class="perfil-usuario">
-                    <div class="foto-nick">
-                        <div class="foto">
-                            <img src="./img/chibirdart1.png" alt="">
-                        </div>
-                        <div class="nick">
-                            <p><b>chibirdart</b></p>
-                            <p>Segue você</p>
-                        </div>
-                    </div>
-                    <div class="seguir-perfil">
-                        <a href="#">Seguir</a>
-                    </div>
-                </div>
-                <div class="perfil-usuario">
-                    <div class="foto-nick">
-                        <div class="foto">
-                            <img src="./img/razoesparaacreditar1.png" alt="">
-                        </div>
-                        <div class="nick">
-                            <p><b>razoesparaacreditar</b></p>
-                            <p>Novo no Instagram</p>
-                        </div>
-                    </div>
-                    <div class="seguir-perfil">
-                        <a href="#">Seguir</a>
-                    </div>
-                </div>
-                <div class="perfil-usuario">
-                    <div class="foto-nick">
-                        <div class="foto">
-                            <img src="./img/adorableanimals1.png" alt="">
-                        </div>
-                        <div class="nick">
-                            <p><b>adorable_animals</b></p>
-                            <p>Segue você</p>
-                        </div>
-                    </div>
-                    <div class="seguir-perfil">
-                        <a href="#">Seguir</a>
-                    </div>
-                </div>
-                <div class="perfil-usuario">
-                    <div class="foto-nick">
-                        <div class="foto">
-                            <img src="./img/smallcutecats1.png" alt="">
-                        </div>
-                        <div class="nick">
-                            <p><b>smallcutecats</b></p>
-                            <p>Segue você</p>
-                        </div>
-                    </div>
-                    <div class="seguir-perfil">
-                        <a href="#">Seguir</a>
+                    <div class="nick">
+                        <p><b>catanacomics</b></p>
+                        <p>Catana</p>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="legal">
-            <p><a href="#">Sobre</a> • <a href="#">Ajuda</a> • <a href="#">Imprensa</a> • <a href="#">API</a> • <a href="#">Carreiras</a> • <a href="#">Privacidade</a> • <a href="#">Termos</a> • <a href="#">Localizações</a> • <a href="#">Contas mais relevantes</a> • <a href="#">Hashtags</a> • <a href="#">Idioma</a></p>
-            <p>© 2021 INSTAGRAM DO FACEBOOK</p>
-        </div>
+            <div class="sugestoes">
+                <div class="sugestoes-titulo">
+                    <p>Sugestões para você</p>
+                    <p><b>Ver tudo</b></p>
+                </div>
+                <div class="para-seguir">
+                    <div class="perfil-usuario">
+                        <div class="foto-nick">
+                            <div class="foto">
+                                <img src="./img/badvibesmemes1.png" alt="">
+                            </div>
+                            <div class="nick">
+                                <p><b>bad.vibes.memes</b></p>
+                                <p>Segue você</p>
+                            </div>
+                        </div>
+                        <div class="seguir-perfil">
+                            <a href="#">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="perfil-usuario">
+                        <div class="foto-nick">
+                            <div class="foto">
+                                <img src="./img/chibirdart1.png" alt="">
+                            </div>
+                            <div class="nick">
+                                <p><b>chibirdart</b></p>
+                                <p>Segue você</p>
+                            </div>
+                        </div>
+                        <div class="seguir-perfil">
+                            <a href="#">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="perfil-usuario">
+                        <div class="foto-nick">
+                            <div class="foto">
+                                <img src="./img/razoesparaacreditar1.png" alt="">
+                            </div>
+                            <div class="nick">
+                                <p><b>razoesparaacreditar</b></p>
+                                <p>Novo no Instagram</p>
+                            </div>
+                        </div>
+                        <div class="seguir-perfil">
+                            <a href="#">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="perfil-usuario">
+                        <div class="foto-nick">
+                            <div class="foto">
+                                <img src="./img/adorableanimals1.png" alt="">
+                            </div>
+                            <div class="nick">
+                                <p><b>adorable_animals</b></p>
+                                <p>Segue você</p>
+                            </div>
+                        </div>
+                        <div class="seguir-perfil">
+                            <a href="#">Seguir</a>
+                        </div>
+                    </div>
+                    <div class="perfil-usuario">
+                        <div class="foto-nick">
+                            <div class="foto">
+                                <img src="./img/smallcutecats1.png" alt="">
+                            </div>
+                            <div class="nick">
+                                <p><b>smallcutecats</b></p>
+                                <p>Segue você</p>
+                            </div>
+                        </div>
+                        <div class="seguir-perfil">
+                            <a href="#">Seguir</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="legal">
+                <p><a href="#">Sobre</a> • <a href="#">Ajuda</a> • <a href="#">Imprensa</a> • <a href="#">API</a> • <a href="#">Carreiras</a> • <a href="#">Privacidade</a> • <a href="#">Termos</a> • <a href="#">Localizações</a> • <a href="#">Contas mais relevantes</a> • <a href="#">Hashtags</a> • <a href="#">Idioma</a></p>
+                <p>© 2021 INSTAGRAM DO FACEBOOK</p>
+            </div>
 
 
+        </div>
     </div>
+    <div class="barra-android">
+                <div class="icons-android">
+                    <ion-icon name="home"></ion-icon>
+                    <ion-icon name="search-outline"></ion-icon>
+                    <ion-icon name="add-circle-outline"></ion-icon>
+                    <ion-icon name="heart-outline"></ion-icon>
+                    <ion-icon name="person-outline"></ion-icon>
+                </div>
     </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
